fix: wrong font used in textarea

--- a/src/css/addSuccess.css
+++ b/src/css/addSuccess.css
@@ -73,6 +73,7 @@ select {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  font-family: Roboto, sans-serif;
 }
 
 input:focus, textarea:focus {
